# imgparallel

./: .gitignore  README.md  pyproject.toml
imgparallel/: cli.py
imgparallel/internal/: dataset.py  file_io.py  pipeline.py
tests/: test_pipeline.py
